# aildap

./: .gitignore  ABOUT  AUTHORS  Jenkinsfile  Makefile  Makefile.OLD  Makefile.am  NEWS  README  TODO  base-sha.c  base-sha.h  base-sha1.c  config.h-OLD  configure.ac  containers.c  domains.c  glib-sha1-2.c  glib-sha1-3.c  glib-sha1.c  lcdb.c  lcg.c  ldap-col.h  ldap-rep.c  ldap-replication.c  lgc.c  password.c  sha1.c  ssha1.c  ssl-config.c  test-ldap-connection.c  user.c
.github/workflows/: ldap-col.yml
TODO.d/: convert_to_dn  get_ldif_dn  get_ldif_entry
dam/: Makefile.OLD  Makefile.am
debian/: aildap.install  changelog  control  copyright  libaildap-dev.install
docker/: build.sh
docker/ldap-provision/: Dockerfile  ailsatech.list
include/: ailsaldap.h  config.h-SETUP
lib/: Makefile.OLD  Makefile.am  ailsa_kv_s.c  common.c  config.c  gcrypt_hash.c  ldap.c  ldif.c  password.c
m4/: ax_check_glib.m4  ax_check_krb5.m4  ax_lib_ailsa.m4  ax_lib_ldap.m4  libldap.m4
man/: Makefile.am  lcc.1  lcdb.1  lcdhcp.1  lcg.1  lck.1  lcou.1  lcr.1  lcs.1  lcsudo.1  lcu.1
old/: Makefile  Makefile.OLD  Makefile.am  README  base-sha.c  base-sha.h  base-sha1.c  domains.c  lcc.c  ldap-col.h  ldap-rep.c  sha.c  sha1.c  ssha1.c  test-ldap-connection.c
old/m4/: ax_enable_dam.m4  ax_enable_old.m4
src/: Makefile.OLD  Makefile.am  aildap.c  base-sha.c  base-sha.h  containers.c  hh.c  lcc.c  lcdb.c  lcdhcp.c  lcg.c  lck.c  lcou.c  lcr.c  lcs.c  lcsudo.c  lcu.c  ldap-col.h  ldap-rep.c  ldap-replication.c  lds  lds.c  shift.c  ssl-config.c  user.c
tests/: Makefile.OLD  Makefile.am  check_get_ldif_domain.c  check_get_ldif_format  check_get_ldif_format.c  check_kv.c
